--- a/valueproject/index.html
+++ b/valueproject/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="highscore.css" />
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -27,6 +27,7 @@
         -ms-user-select: none;
         user-select: none;
       }
+
 
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
