--- a/valueproject/index.html
+++ b/valueproject/index.html
@@ -75,7 +75,7 @@
     <h1 class="cover-heading">ART VALUE</h1>
     <p class="lead"><img src ="https://i.imgur.com/xYqtZtj.png" id ="appraisers"></p>
     <p>
-      <a href="#" id="start-btn" class="btn btn-lg btn-secondary" role="button">start</a>
+      <a href="#" id="start-btn" class="btn btn-lg btn-secondary" role="button">START</a>
     </p>
   </div>
   </main>
