--- a/valueproject/index.html
+++ b/valueproject/index.html
@@ -72,7 +72,7 @@
 
   <main role="main" class="inner cover">
     <div id="opener">
-    <h1 class="cover-heading">ART VALUE</h1>
+    <!-- <h1 class="cover-heading">ART VALUE</h1> -->
     <p class="lead"><img src ="https://i.imgur.com/xYqtZtj.png" id ="appraisers"></p>
     <p>
       <a href="#" id="start-btn" class="btn btn-lg btn-secondary" role="button">START</a>
