--- a/valueproject/highscore.html
+++ b/valueproject/highscore.html
@@ -56,9 +56,11 @@
     <p class="lead"><div class="photo-container"><div class="container">
     </div>
     <div class="image">
-      <a href=""><img src="https://www.sartle.com/media/artwork/laughing-cavalier-frans-hals.jpg"/></a>
-      <div class="overlay"><img src="https://www.sothebys.com/content/dam/stb/lots/N09/N09497/232N09497_8ZJ76.jpg"/></div>
-    </div>
+      <a href=""> <div id="qImg2" class="d">
+      <div id = "scoreDiv"></div>
+      </div> </a>
+     
+   
   </div></div></div></p>
     <p class="lead">
         <form>
@@ -76,17 +78,7 @@
     </p>
     
 <center>
-<!-- <div id="qImg2" class="d">
-<!-- <img src="https://www.sartle.com/media/artwork/laughing-cavalier-frans-hals.jpg"> -->
-<!-- </div>
-<br> -->
-<!-- <div id="qImg3"> -->
-<!-- <img src="https://www.sothebys.com/content/dam/stb/lots/L19/L19006/101L19006_B89S5.jpg"> -->
-<!-- </div> -->
-<!-- <br> -->
-<!-- <div id="qImg4"> -->
-<!-- <img src="https://www.sothebys.com/content/dam/stb/lots/N09/N09497/232N09497_8ZJ76.jpg"> -->
-<!-- </div>  -->
+ 
 
 </center>
   </main>
