--- a/valueproject/index.html
+++ b/valueproject/index.html
@@ -61,6 +61,7 @@
     
 
   </div>
+  
 
   
 <div class="photo-container">
@@ -103,5 +104,5 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 crossorigin="anonymous"
 ></script>
 <script src="script.js"></script>
-<script src="highscore.js"></script>
+<!-- <script src="highscore.js"></script> -->
 </html>
